# RetroFont

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  Systems.md  TODO.md  win32_build.ps1
fonts.in/: 2513.pbm  amiga.fontspec  amiga_10x9_ks10.pbm  amiga_10x9_ks12.pbm  amiga_10x9_ks20.pbm  amiga_8x8_ks10.pbm  apple2.fontspec  apple2e.pbm  atari8.fontspec  atari8_atascii.pbm  atari8_intl.pbm  bbc.fontspec  bbc.pbm  c64.fontspec  c64.pbm  cbm.fontspec  cbm_c128_shifted.pbm  cbm_c16_shifted.pbm  cbm_c64_shifted.pbm  cbm_c64_unshifted.pbm  cbm_pet_shifted.pbm  cbm_pet_unshifted.pbm  cbm_vic_shifted.pbm  cbm_vic_unshifted.pbm  cpc.fontspec  cpc.pbm  decvt.fontspec  decvt100.pbm  decvt220.pbm  ega_cpi_cp437_8x14.pbm  ega_cpi_cp437_8x16.pbm  ega_cpi_cp437_8x8.pbm  iso_cpi_cp437_8x16.pbm  mc6847.fontspec  mc6847.pbm  pc.fontspec  pc_8x14_ati.pbm  pc_8x14_mda.pbm  pc_8x14_vga.pbm  pc_8x16_ati.pbm  (+19 more)
retrofont/include/: retrofont.h
retrofont/src/: charsets.c  rfcore.c  rfparse_ansi.c  rfparse_int.c  rfparse_util.c  sys_amiga.c  sys_apple2.c  sys_atari8.c  sys_bbc.c  sys_c64.c  sys_cbm.c  sys_cpc.c  sys_decvt.c  sys_generic.c  sys_mc6847.c  sys_pc.c  sys_robotron.c  sys_st.c  sys_zx.c
rftest/: rftest.c  rftest.cpp  rftest.h
src/: font_import.py  retrofont.h  rfcore.c  rftest.c  sys_c64.c  sys_pc.c  sys_zx.c
util/: create_saa505x_font.py  extract_amiga_rom_fonts.py  extract_cpi_file.py  extract_font.py  extract_pc_rom_fonts.py  extract_robotron_fonts.sh  fill_unicode_names.py  font_import.py  generate_fallback_map.py  get_decvt_font.py  update_systems.py
